# rust

./: Cargo.toml  README.md
examples/inceptionv3/: create_model.py
examples/inceptionv3/optimized_model/: keras_metadata.pb
examples/inceptionv3/optimized_model/variables/: variables.index
examples/mobilenetv3/: create_model.py
examples/mobilenetv3/optimized_model/: keras_metadata.pb  saved_model.pb
examples/mobilenetv3/optimized_model/variables/: variables.index
src/: buffer.rs  graph.rs  lib.rs  ops.rs  scope.rs  session.rs  while_loop.rs
tensorflow-sys/: generate_bindgen_rs.sh
tensorflow-sys/src/: c_api.rs
tensorflow-sys/src/runtime_linking/: c_api.rs  finder.rs  runtime.rs
