[package]
name = "tf_runtime_bindings"
version = "0.1.0"
authors = ["Brian Jones <brian.j.jones@intel.com>"]
description = "Runtime Rust language bindings for TensorFlow."
license = "Apache-2.0"
keywords = ["TensorFlow", "runtime bindings"]
readme = "README.md"
# repository = "https://github.com/tensorflow/rust"
# documentation = "https://tensorflow.github.io/rust/tensorflow"
edition = "2018"
rust-version = "1.59.0"

[dependencies]
libc = "0.2.132"
tensorflow-internal-macros = { version = "=0.0.3", path = "tensorflow-internal-macros" }
tensorflow-sys-runtime = { version = "0.1.0", path = "tensorflow-sys-runtime"}
half = "2.1.0"
# This is used internally but not intended to be exposed through the API.
protobuf = "=2.27.1"
rustversion = "1.0.9"

[workspace]


